API updated, JUNIT5 tests for controller methods, getAll method implemented
